feat(Background): Add tile control
Refactored some functions and added the ability to adjust the pattern tiling rate via an input.

--- a/src/app/components/background/background.html
+++ b/src/app/components/background/background.html
@@ -7,6 +7,7 @@
     </div>
     <div class="controls">
       <label>Duration: <input type="number" min="1" max="100" value.bind="duration" value="5"></label>
+      <label>Tiles: <input type="number" min="1" max="100" value.bind="tiles" value="5"></label>
     </div>
   </div>
 </template>
